EcommerceAI/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Casa-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Casa-deployment
  template:
    metadata:
      labels:
        app: Casa-deployment
    spec:
      containers:
        - name: Casa
          image: yoness/Casa
          ports:
            - containerPort: 8000
