EcommerceAI/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Casa-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: Casa-deployment
